# P07_implementez_un_modele_de_scoring

./: .gitignore  README.md  input_example_swagger.json  pyproject.toml  requirements.txt
.github/workflows/: evidently.yml  pytest.yml
api/: api_scoring.py  api_scoring_streamlit.py
data/: readme.md
data_processed/: readme.md
monitoring/: run_evidently.py  schedule_drift.py
monitoring/reports/: pytest_report.html
notebooks/: 01_preparation_donnees.ipynb  02_modelisation_scoring.ipynb  EDA_nettoyage_feature_importance_complet.ipynb  modelisation_scoring_mlflow_final_CORRIGE.ipynb
notebooks/exports/: metrics_model_final.csv  seuils_cout_gb.csv
notebooks/notebooks/exports/: feature_importance_top20.csv
reports/: pytest_report.html
tests/: test_sanity.py
utils/: gitignore
