[project]
name = "p07_model_scoring_clean"
version = "0.1.0"
description = "Projet de scoring avec MLflow, FastAPI, Streamlit, Evidently"
authors = [{ name = "Laurent" }]
requires-python = ">=3.12"

dependencies = [
    # Data Science
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "statsmodels",

    # Visualisation
    "matplotlib",
    "seaborn",
    "plotly",

    # API & Web
    "fastapi",
    "uvicorn",
    "requests",

    # Monitoring & MLOps
    "mlflow",
    "evidently",

    # Apps & Dashboard
    "streamlit",

    # Notebooks
    "jupyter",
    "ipykernel",

    # Automatisation & utilitaires
    "python-dotenv",
    "pyyaml",
    "pytest",
]
